--- a/index.html
+++ b/index.html
@@ -408,6 +408,7 @@
 				Z. Xu, <u><strong>Z. Fan (editors)</strong></u>, &ldquo;Evolutionary Computing for Intelligent Power System Optimization and Control&rdquo;, Nova Science Publisher 2010, ISBN:978-1-61728-031-3</li>
 			<li>
 				<u><strong>范衠 (著）</strong></u><strong>，</strong>朱贵杰，王攀(译). &ldquo;机电设计自动化新兴研究及其进展&rdquo;, 北京: 科学出版社, 2018, ISBN: 978-7-03-055452-9</li>
+			    <u><strong>范衠</strong></u>，李耘，朱晓敏等（著）.&ldquo;具身智能与设计自动化：机器人系统与优化方法&rdquo;,北京: 科学出版社, 2026</li>
 		</ol>    
 				</div>
 			</div>             
@@ -2299,3 +2300,4 @@
 
 	</body>
 </html>
+
