--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 			<li>
 				<u><strong>范衠 (著）</strong></u><strong>，</strong>朱贵杰，王攀(译). &ldquo;机电设计自动化新兴研究及其进展&rdquo;, 北京: 科学出版社, 2018, ISBN: 978-7-03-055452-9</li>
 			<li align="justify">
-			    <u>**范衠**</u>，李耘，朱晓敏等（著）. &ldquo具身智能与设计自动化：机器人系统与优化方法&rdquo;, 北京: 科学出版社, 2026</li>
+			   <u><strong>范衠 (著）</strong></u><strong>，</strong>，李耘，朱晓敏等（著）. &ldquo具身智能与设计自动化：机器人系统与优化方法&rdquo;, 北京: 科学出版社, 2026</li>
 		</ol>    
 				</div>
 			</div>             
@@ -2301,6 +2301,7 @@
 
 	</body>
 </html>
+
 
 
 
