--- a/index.html
+++ b/index.html
@@ -217,6 +217,8 @@
                 <h2 class="item-title">科研项目</h2>
 				<div>
                     <ol style="text-align: justify;">
+						<li>
+							<span>2025，主持与深圳市优必选科技股份有限公司合作开发项目&ldquo;东部新区丹景项目智慧康养系统开发及维护&rdquo;</span></li>
                         <li>
                             <span>2022-2025，主持科技创新2030 -&ldquo;新一代人工智能&rdquo;重大项目 &quot;因果推理与决策理论模型研究&quot;，项目编号：2021ZD0111502</span></li>
                         <li>
@@ -2301,6 +2303,7 @@
 
 	</body>
 </html>
+
 
 
 
