--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 				<div>
                     <ol style="text-align: justify;">
 						<li>
-							<span>2025，主持与深圳市优必选科技股份有限公司合作开发项目 “东部新区丹景项目智慧康养系统开发及维护” ;，项目编号：GYY2025111301</span></li>
+							<span>2025-2026，主持与深圳市优必选科技股份有限公司合作开发项目 “东部新区丹景项目智慧康养系统开发及维护” ，项目编号：GYY2025111301</span></li>
                         <li>
                             <span>2022-2025，主持科技创新2030 -&ldquo;新一代人工智能&rdquo;重大项目 &quot;因果推理与决策理论模型研究&quot;，项目编号：2021ZD0111502</span></li>
                         <li>
@@ -2303,6 +2303,7 @@
 
 	</body>
 </html>
+
 
 
 
