--- a/index.html
+++ b/index.html
@@ -314,6 +314,18 @@
 				<div>
 	<ol>
 		<li>
+			2025年1月应邀出席第二届程度电子科技大学深圳新质生产力论坛并作报告，报告题目为《具身智能与设计自动化》</li>
+		<li>
+			2024年11月应邀出席智汇邯山•AI赋能未来——2024中国·邯郸人工智能产教研融合发展大会并作报告，报告题目为《设计自动化在智能机器人系统中的应用》</li>
+		<li>
+			2024年11月应邀出席武汉理工大学“理工大讲堂”并作报告，报告题目为《基于设计自动化方法的机器人系统开发与应用》</li>
+		<li>
+			2024年9月应邀出席深圳市科技交流服务中心主办、深圳市人工智能产业协会承办的“科创跨境”人工智能产业合作与创新交流活动会并作报告，报告题目为《携手国际合作：设计自动化与大模型共塑机器人技术未来》</li>
+		<li>
+			2024年8月应邀出席2024深圳(国际)通用人工智能大会暨AI大健康峰会并作报告，报告题目为《以智慧康养机器人系统设计为例，设计自动化在智能机器人系统中的应用》</li>
+		<li>
+			2024年7月应邀出席西安交通大学数学与统计学院的基础模型与优化算法发现研讨会并作报告，报告题目为《基于设计自动化方法的机器人系统开发与应用》</li>
+		<li>
 			2023年11月应邀出席国防科技大学、西安交通大学以及约克大学（加拿大）联合举办的第九届大数据与信息分析国际会议并作报告，报告题目为《Design Automation of Intelligent Robots: Key Technologies and Applications》 <a href="https://www.bilibili.com/video/BV12N4y1B7dV/#reply201626534464"><u><span style="color:#0000ff;">会议回放</span></u></a>&nbsp;&nbsp;<u><a href="https://imagelab.stu.edu.cn/upload/files/（已压缩）Design Automation of Intelligent Robots-Key Technologies and Applications-short version.pdf"><span style="color:#0000ff;">报告PPT</span></a></u></li>
 		<li>
 			2023年11月应邀出席武汉科技大学主办的亚太人工智能学会武汉分会2023年人工智能前沿论坛并作报告，报告题目《面向设计自动化的智能机器人系统关键技术及应用》</li>
@@ -2307,6 +2319,7 @@
 
 	</body>
 </html>
+
 
 
 
