--- a/index.html
+++ b/index.html
@@ -485,8 +485,16 @@
 	<div class="item">
 		<h2 class="item-title">
 			国际期刊论文</h2>
-		<p class="item-title">
-			<em><font face="arial, helvetica, sans-serif"><b>[2023]</b></font></em></p>
+		<h2 class="item-title">
+			<em style="font-family: arial, helvetica, sans-serif;"><strong>[2024]</strong></em></h2>
+		<ol style="text-align: justify;">
+			<li>Y. Rong, Q. Chen, Z. Jiang, Z. Fan*, H. Chen*. Regional choroidal thickness estimation from color fundus images based on convolutional neural networks[J], Heliyon, 2024, 10(5).(SCI综合性期刊3区, JCR:Q1)&nbsp;<a href="https://https://imagelab.stu.edu.cn/upload/files/13-Regional%20choroidal%20thickness%20estimation%20from%20color%20fundus%20images%20based%20on%20convolutional%20neural%20networks.pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
+
+
+
+			
+		<h2 class="item-title">
+			<em style="font-family: arial, helvetica, sans-serif;"><strong>[2023]</strong></em></h2>
 		<ol style="text-align: justify;">
 			<li>
 				C. Li, <strong><u>Z. Fan*</u></strong>, Y.Chen, H. Lin, L. Moretti, G. Loprencipe*, W. Sheng, K. Wang.&nbsp;CrackCLF: Automatic Pavement Crack Detection Based on Closed-Loop Feedback[J],&nbsp;IEEE Transactions on Intelligent Transportation Systems, 2023.&nbsp;<a href="https://imagelab.stu.edu.cn/upload/files/CrackCLF.pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li>
@@ -2319,6 +2327,7 @@
 
 	</body>
 </html>
+
 
 
 
