--- a/index.html
+++ b/index.html
@@ -488,7 +488,8 @@
 		<h2 class="item-title">
 			<em style="font-family: arial, helvetica, sans-serif;"><strong>[2024]</strong></em></h2>
 		<ol style="text-align: justify;">
-			<li>Y. Rong, Q. Chen, Z. Jiang, Z. Fan*, H. Chen*. Regional choroidal thickness estimation from color fundus images based on convolutional neural networks[J], Heliyon, 2024, 10(5).(SCI综合性期刊3区, JCR:Q1)&nbsp;<a href="https://https://imagelab.stu.edu.cn/upload/files/13-Regional%20choroidal%20thickness%20estimation%20from%20color%20fundus%20images%20based%20on%20convolutional%20neural%20networks.pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
+			<li>
+				Y. Rong, Q. Chen, Z. Jiang, Z. Fan*, H. Chen*. Regional choroidal thickness estimation from color fundus images based on convolutional neural networks[J], Heliyon, 2024, 10(5).(SCI综合性期刊3区, JCR:Q1)&nbsp;<a href="https://https://imagelab.stu.edu.cn/upload/files/13-Regional%20choroidal%20thickness%20estimation%20from%20color%20fundus%20images%20based%20on%20convolutional%20neural%20networks.pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
 
 
 
@@ -2327,6 +2328,7 @@
 
 	</body>
 </html>
+
 
 
 
