--- a/index.html
+++ b/index.html
@@ -489,9 +489,9 @@
 			<em style="font-family: arial, helvetica, sans-serif;"><strong>[2024]</strong></em></h2>
 		<ol style="text-align: justify;">
 			<li>
-				Y. Rong, Q. Chen, Z. Jiang,<strong><u> Z. Fan*</u></strong>, H. Chen*. Regional choroidal thickness estimation from color fundus images based on convolutional neural networks[J], Heliyon, 2024, 10(5).(SCI综合性期刊3区, JCR:Q1)&nbsp;<a href="https://https://imagelab.stu.edu.cn/upload/files/13-Regional%20choroidal%20thickness%20estimation%20from%20color%20fundus%20images%20based%20on%20convolutional%20neural%20networks.pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
+				Y. Rong, Q. Chen, Z. Jiang,<strong><u> Z. Fan*</u></strong>, H. Chen*. Regional choroidal thickness estimation from color fundus images based on convolutional neural networks[J], Heliyon, 2024, 10(5).(SCI综合性期刊3区, JCR:Q1)&nbsp;<a href="https://imagelab.stu.edu.cn/upload/files/13-Regional%20choroidal%20thickness%20estimation%20from%20color%20fundus%20images%20based%20on%20convolutional%20neural%20networks.pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
             <li>
-				P. Li, M. Wang, Z. Fan, H. Huang, G. Zhu, J. Zhuang. OUR-Net: A Multi-Frequency Network With Octave Max Unpooling and Octave Convolution Residual Block for Pavement Crack Segmentation[J], IEEE Transactions on Intelligent Transportation Systems, 2024,25(10): 13833-13848.(SCI工程技术1区, JCR:Q1)&nbsp;<a href="https://https://https://imagelab.stu.edu.cn/upload/files/%EF%BC%88%E5%B7%B2%E5%8E%8B%E7%BC%A9%EF%BC%8912-OUR-Net_A_Multi-Frequency_Network_With_Octave_Max_Unpooling_and_Octave_Convolution_Residual_Block_for_Pavement_Crack_Segmentation(1).pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
+				P. Li, M. Wang, Z. Fan, H. Huang, G. Zhu, J. Zhuang. OUR-Net: A Multi-Frequency Network With Octave Max Unpooling and Octave Convolution Residual Block for Pavement Crack Segmentation[J], IEEE Transactions on Intelligent Transportation Systems, 2024,25(10): 13833-13848.(SCI工程技术1区, JCR:Q1)&nbsp;<a href="https://imagelab.stu.edu.cn/upload/files/%EF%BC%88%E5%B7%B2%E5%8E%8B%E7%BC%A9%EF%BC%8912-OUR-Net_A_Multi-Frequency_Network_With_Octave_Max_Unpooling_and_Octave_Convolution_Residual_Block_for_Pavement_Crack_Segmentation(1).pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
 
 			
 		<h2 class="item-title">
@@ -2328,6 +2328,7 @@
 
 	</body>
 </html>
+
 
 
 
