--- a/index.html
+++ b/index.html
@@ -488,10 +488,8 @@
 		<h2 class="item-title">
 			<em style="font-family: arial, helvetica, sans-serif;"><strong>[2024]</strong></em></h2>
 		<ol style="text-align: justify;">
-			<li>
-				Y. Rong, Q. Chen, Z. Jiang,<strong><u>Z. Fan*</u></strong>, H. Chen*. Regional choroidal thickness estimation from color fundus images based on convolutional neural networks[J], Heliyon, 2024, 10(5).(SCI综合性期刊3区, JCR:Q1)&nbsp;<a href="https://imagelab.stu.edu.cn/upload/files/13-Regional%20choroidal%20thickness%20estimation%20from%20color%20fundus%20images%20based%20on%20convolutional%20neural%20networks.pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
-            <li>
-				P. Li, M. Wang, <strong><u>Z. Fan</u></strong>, H. Huang, G. Zhu, J. Zhuang. OUR-Net: A Multi-Frequency Network With Octave Max Unpooling and Octave Convolution Residual Block for Pavement Crack Segmentation[J], IEEE Transactions on Intelligent Transportation Systems, 2024,25(10): 13833-13848.(SCI工程技术1区, JCR:Q1)&nbsp;<a href="https://imagelab.stu.edu.cn/upload/files/%EF%BC%88%E5%B7%B2%E5%8E%8B%E7%BC%A9%EF%BC%8912-OUR-Net_A_Multi-Frequency_Network_With_Octave_Max_Unpooling_and_Octave_Convolution_Residual_Block_for_Pavement_Crack_Segmentation(1).pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
+			
+           
             <li>
 				<strong><u>Z. Fan</u></strong>, Z. Xia, C. Lin, G. Han, W. Li, D. Wang, Y. Chen, Z. Hao, R. Cai, J. Zhuang. UAV Collision Avoidance in Unknown Scenarios with Causal Representation Disentanglement[J], Drones, 2024, 9(1): 10. (SCI工程技术2区，JCR: Q2)&nbsp;<a href="https://imagelab.stu.edu.cn/upload/files/drones-09-00010-v2.pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
 			<li>
@@ -500,8 +498,19 @@
 				Y. Rong, T. Lin, H. Chen, <strong><u>Z. Fan</u></strong>, X. Chen. Searching discriminative regions for convolutional neural networks in fundus image classification with genetic algorithms[J], IEEE Transactions on Image Processing, 2024, 33: 5949-5958.(SCI计算机科学1区, JCR:Q1)&nbsp;<a href="https://imagelab.stu.edu.cn/upload/files/2-Searching_Discriminative_Regions_for_Convolutional_Neural_Networks_in_Fundus_Image_Classification_With_Genetic_Algorithms.pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
 			<li>
 				B. Yang, D. Wang*, Z. Wen, W. Wei, W. Li, <strong><u>Z. Fan</u></strong>. Observer-based Hybrid Event-triggered Model Predictive Tracking Control for Mecanum-wheeled Mobile Robot[J]. Authorea, 2024. &nbsp;<a href="https://imagelab.stu.edu.cn/upload/files/3-Observer-based%20Hybrid%20Event-triggered%20Model%20Predictive%20Tracking%20Control%20for%20Mecanum-wheeled%20Mobile%20Robot.pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
-			
-			
+			<li>
+				D. Wang, Y. Gao, W. Wei*, Q. Yu, Y. Wei, W. Li, <strong><u>Z. Fan</u></strong>. Sliding mode observer-based model predictive tracking control for Mecanum-wheeled mobile robot[J], ISA transactions, 2024, 151: 51-61.(SCI计算机科学2区, JCR:Q1)&nbsp;<a href="https://imagelab.stu.edu.cn/upload/files/5-Sliding%20mode%20observer-based%20model%20predictive%20tracking%20control%20for%20Mecanum-wheeled%20mobile%20robot.pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
+			<li>
+				F. Ullah, W. Wei*, <strong><u>Z. Fan</u></strong>, Q. Yu. 6D object pose estimation based on dense convolutional object center voting with improved accuracy and efficiency[J], The Visual Computer, 2024, 40(8): 5421-5434.(SCI计算机科学3区, JCR:Q1)&nbsp;<a href="https://imagelab.stu.edu.cn/upload/files/6-6D%20object%20pose%20estimation%20based%20on%20dense%20convolutional%20object%20center%20voting%20with%20improved%20accuracy%20and%20efficiency.pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
+			<li>
+				G. Peng*, <strong><u>Z. Fan</u></strong>. Recent Advances in Trajectory Planning and Object Recognition for Robot Sensing and Control[J], Sensors, 2024, 24(14): 4509.(SCI综合性期刊3区, JCR:Q1)&nbsp;<a href="https://imagelab.stu.edu.cn/upload/files/9-Recent%20Advances%20in%20Trajectory%20Planning%20and%20Object%20Recognition%20for%20Robot%20Sensing%20and%20Control.pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
+			<li>
+				G. Zhu, J. Liu, <strong><u>Z. Fan*</u></strong>, D. Yuan, P. Ma, M. Wang*, W. Sheng, K. Wang. A lightweight encoder–decoder network for automatic pavement crack detectionp[J], Computer‐Aided Civil and Infrastructure Engineering, 2024, 39(12): 1743-1765.(SCI工程技术1区, JCR:Q1)&nbsp;<a href="https://imagelab.stu.edu.cn/upload/files/11-A%20lightweight%20encoder%E2%80%93decoder%20network%20for%20automatic%20pavement%20crack%20detection.pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
+			<li>
+				P. Li, M. Wang, <strong><u>Z. Fan</u></strong>, H. Huang, G. Zhu, J. Zhuang. OUR-Net: A Multi-Frequency Network With Octave Max Unpooling and Octave Convolution Residual Block for Pavement Crack Segmentation[J], IEEE Transactions on Intelligent Transportation Systems, 2024,25(10): 13833-13848.(SCI工程技术1区, JCR:Q1)&nbsp;<a href="https://imagelab.stu.edu.cn/upload/files/%EF%BC%88%E5%B7%B2%E5%8E%8B%E7%BC%A9%EF%BC%8912-OUR-Net_A_Multi-Frequency_Network_With_Octave_Max_Unpooling_and_Octave_Convolution_Residual_Block_for_Pavement_Crack_Segmentation(1).pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
+			<li>
+				Y. Rong, Q. Chen, Z. Jiang,<strong><u>Z. Fan*</u></strong>, H. Chen*. Regional choroidal thickness estimation from color fundus images based on convolutional neural networks[J], Heliyon, 2024, 10(5).(SCI综合性期刊3区, JCR:Q1)&nbsp;<a href="https://imagelab.stu.edu.cn/upload/files/13-Regional%20choroidal%20thickness%20estimation%20from%20color%20fundus%20images%20based%20on%20convolutional%20neural%20networks.pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
+		</ol>
 		<h2 class="item-title">
 			<em style="font-family: arial, helvetica, sans-serif;"><strong>[2023]</strong></em></h2>
 		<ol style="text-align: justify;">
@@ -2336,6 +2345,7 @@
 
 	</body>
 </html>
+
 
 
 
