--- a/index.html
+++ b/index.html
@@ -486,10 +486,22 @@
 		<h2 class="item-title">
 			国际期刊论文</h2>
 		<h2 class="item-title">
+			<em style="font-family: arial, helvetica, sans-serif;"><strong>[2025]</strong></em></h2>
+		<ol style="text-align: justify;">
+			 <li>
+				 B. Xu, G. Rang, R. Xie, W. Li, D. Gong, <strong><u>Z. Fan</u></strong>, S. Yang, J. He. A prediction approach based on long short-term memory networks for dynamic multiobjective optimization[J]. Expert Systems with Applications, 2025: 127792.</li>
+			 <li>
+				B. Xu, Y. Zheng, W. Li, X. Gao, D. Gong, J. He, <strong><u>Z. Fan</u></strong>. Handling Multiobjective Optimization Problems With Complex Constraints: A Constraints Grouping-Based Approach[J]. IEEE Transactions on Systems, Man, and Cybernetics: Systems, 2025.</li>
+			 <li>
+				W. Huang, L. Lin, S. Wang, <strong><u>Z. Fan</u></strong>, B. Yu, J. Chen. A Fast Point Cloud Ground Segmentation Approach Based on Block-Sparsely Connected Coarse-to-Fine Markov Random Field[J]. IEEE Robotics and Automation Letters, 2025.</li>
+			 <li>
+				X. Lin, Y. Niu, X. Yu, <strong><u>Z. Fan</u></strong>, J. Zhuang, A.M. Zou*. Paying more attention on backgrounds: Background-centric attention for UAV detection[J]. Neural Networks, 2025: 107182.</li>
+			 <li>
+				Z. Wang, S. Shen*, D. Chen, W. Li, W. Li, <strong><u>Z. Fan*</u></strong>. Multi-objective optimization of the wellbore trajectory considering both geological and engineering factors[J],Geoenergy Science and Engineering, 2025: 213647.</li>
+		</ol>
+		<h2 class="item-title">
 			<em style="font-family: arial, helvetica, sans-serif;"><strong>[2024]</strong></em></h2>
 		<ol style="text-align: justify;">
-			
-           
             <li>
 				<strong><u>Z. Fan</u></strong>, Z. Xia, C. Lin, G. Han, W. Li, D. Wang, Y. Chen, Z. Hao, R. Cai, J. Zhuang. UAV Collision Avoidance in Unknown Scenarios with Causal Representation Disentanglement[J], Drones, 2024, 9(1): 10. (SCI工程技术2区，JCR: Q2)&nbsp;<a href="https://imagelab.stu.edu.cn/upload/files/drones-09-00010-v2.pdf"><span style="color: rgb(0, 0, 205);">Download PDF</span></a></li></li>
 			<li>
@@ -2345,6 +2357,7 @@
 
 	</body>
 </html>
+
 
 
 
