--- a/index.html
+++ b/index.html
@@ -863,6 +863,34 @@
 		<div align="justify" class="teaching">
 			<ol>
 				<li>
+					R. Lin, J. Zhuang, Z. Hao, <strong><u>Z. Fan</u></strong>. Research on Lightweight Object Detection Based on Improved YOLOv8n for Experimental Scenarios[C]//2024 2nd International Conference on Artificial Intelligence and Automation Control (AIAC). IEEE, 2024: 392-398.</li>
+				<li>
+					G. Han, Q. Wu, B. Wang, C. Lin, J. Zhuang, W. Li, Z. Hao, <strong><u>Z. Fan</u></strong>. Deep Reinforcement Learning based Multi-UAV Collision Avoidance with Causal Representation Learning[C]//2024 10th International Conference on Big Data and Information Analytics (BigDIA). IEEE, 2024: 833-839.</li>
+				<li>
+					S. Wang, Y. Qiu, W. Li, Z. Wang, B. Xu, J. Zhuang, Z. Hao, <strong><u>Z. Fan</u></strong>. Multi-stage Global and Local Cooperative Constrained Multi-objective Evolutionary Algorithm[C]//2024 6th International Conference on Data-driven Optimization of Complex Systems (DOCS). IEEE, 2024: 200-205.</li>
+				<li>
+					Y. Xue, H. Wang, C. Liu, W. Li, J. Zhuang, L. Ma, Z. Hao, <strong><u>Z. Fan</u></strong>. Causal Structure Learning of High-Dimensional Data Based on Local and Global Collaboration[C]//2024 20th International Conference on Natural Computation, Fuzzy Systems and Knowledge Discovery (ICNC-FSKD). IEEE, 2024: 1-6.</li>
+				<li>
+					B. Yang, D. Wang, Z. Wen, W. Wei, W. Li, <strong><u>Z. Fan</u></strong>. Extended State Observer Based Fault-Tolerant Predictive Control for a Four-Mecanum Wheels Mobile Robot[C]//2024 IEEE 14th International Conference on CYBER Technology in Automation, Control, and Intelligent Systems (CYBER). IEEE, 2024: 621-626.</li>
+				<li>
+					H. Wang, Y. Yu, Y. Xue, Z. Wang, J. Zhuang, W. Li, Z. Hao, <strong><u>Z. Fan</u></strong>. Causal Structure Learning Based on Genetic Algorithm and Markov Blanket[C]//2024 IEEE 14th International Conference on CYBER Technology in Automation, Control, and Intelligent Systems (CYBER). IEEE, 2024: 720-725.</li>
+				<li>
+					W. Li, C. Chen, Z. Wang, C. Guan, B. Wang, D. Wang, J. Zhuang, <strong><u>Z. Fan</u></strong>. Gene Regulatory Network Model for Adaptive Flocking Patterns of Multi-Agent Systems[C]//2024 IEEE 14th International Conference on CYBER Technology in Automation, Control, and Intelligent Systems (CYBER). IEEE, 2024: 144-149.</li>
+				<li>
+					C. Liu, S. Wang, Z. Wang, J. Zhuang, W. Li, Z. Hao, <strong><u>Z. Fan</u></strong>. Federated Causal Structure Learning with a Bi-Level Optimization Model[C]//2024 IEEE 14th International Conference on CYBER Technology in Automation, Control, and Intelligent Systems (CYBER). IEEE, 2024: 708-713.</li>
+				<li>
+					R. Mai, Y. Qiu, W. Li, Z. Wang, B. Xu, W. Chen, J. Zhuang, Y. Li, <strong><u>Z. Fan</u></strong>. Expensive Constrained Multi-objective Evolutionary Algorithm with Pareto Set Learning[C]//Proceedings of the Genetic and Evolutionary Computation Conference Companion. 2024: 351-354.</li>
+				<li>
+					Z. Wang, C. Ding, W. Li, Y. Qiu, J. Zhuang, D. Chen, B. Xu, Y. Li, <strong><u>Z. Fan</u></strong>. Well Trajectory Design Based on Constrained Many-Objective Optimization Algorithms[C]//2024 IEEE Congress on Evolutionary Computation (CEC). IEEE, 2024: 1-8.</li>
+				<li>
+					J. Zhuang, Z. Wang, Y. Zhang, <strong><u>Z. Fan</u></strong>. Infer from what you have seen before: Temporally-dependent classifier for semi-supervised video segmentation[C]//Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition. 2024: 3575-3584.</li>
+				<li>
+					W. Li, P. Ren, Z. Wang, D. Wang, B. Xu, C. Guan, C. Chen, J. Zhuang, <strong><u>Z. Fan</u></strong>. A multi-agent control model based on gene regulatory network[C]//2023 9th International Conference on Big Data and Information Analytics (BigDIA). IEEE, 2023: 15-20.</li>
+				<li>
+					W. Li, Y. Qiu, Z. Wang, Q. Zhang, R. Mai, B. Xu, Y. Zhang, J. Zhuang, <strong><u>Z. Fan</u></strong>. A constrained multi-objective evolutionary algorithm based on early convergence followed by diversity[C]//2023 5th International Conference on Data-driven Optimization of Complex Systems (DOCS). IEEE, 2023: 1-8.</li>
+				<li>
+					Liu. J, Ning. W, Wang. D, Z. Zhen, W. Xia, <strong><u>Z. Fan</u></strong>, et al. A Novel Robot System for Hair Transplant Surgery Based on Self-Calibration and Structured Light Hair Follicle Detection[C]//2023 42nd Chinese Control Conference (CCC). IEEE, 2023: 4865-4871.</li>
+				<li>
 					G. Zhu, B. Qiu, J. Liu, Z. Wang, <strong><u>Z. Fan</u></strong>. Steel Bars Counting and Center Localization Method Based on Convolutional Neural Network and Distance Clusting. 2023 42nd Chinese Control Conference (CCC), 8775-8779</li>
 				<li>
 					P. Xu, Z. Shi, <strong><u>Z. Fan</u></strong>. Multi-Objective Trapping of UAVs Swarm Based on Gene Regulatory Networks. 2023 IEEE 13th International Conference on CYBER Technology in Automation, Control, and Intelligent Systems (CYBER)</li>
@@ -2357,6 +2385,7 @@
 
 	</body>
 </html>
+
 
 
 
