--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,13 @@
 			软件著作权：</h3>
 		<ol>
 			<li>
-				<span style="">基于移动端的电厂DCS远程控制软件V1.0, 登记号:&nbsp;2023SR0261757</span></li>
+				<span style="">基于因果特征解耦的裂缝检测系统V1.0, 登记号：2025SR0583134&nbsp;<u><a href="https://imagelab.stu.edu.cn/upload/files/2025SR0583134_%E5%9F%BA%E4%BA%8E%E5%9B%A0%E6%9E%9C%E7%89%B9%E5%BE%81%E8%A7%A3%E8%80%A6%E7%9A%84%E8%A3%82%E7%BC%9D%E6%A3%80%E6%B5%8B%E7%B3%BB%E7%BB%9FV1.0_%E8%AE%A1%E7%AE%97%E6%9C%BA%E8%BD%AF%E4%BB%B6%E8%91%97%E4%BD%9C%E6%9D%83%E7%99%BB%E8%AE%B0%E8%AF%81%E4%B9%A6.pdf"><span style="color: rgb(0, 0, 255);">PDF</span></a></u></span></li>
+			<li>
+				<span style="">基于因果干预无人机避障导航系统V1.0, 登记号：2025SR0097094&nbsp;<u><a href="https://imagelab.stu.edu.cn/upload/files/2025SR0097094_%E5%9F%BA%E4%BA%8E%E5%9B%A0%E6%9E%9C%E5%B9%B2%E9%A2%84%E7%9A%84%E5%A4%9A%E6%97%A0%E4%BA%BA%E6%9C%BA%E9%81%BF%E9%9A%9C%E5%AF%BC%E8%88%AA%E7%B3%BB%E7%BB%9F[%E7%AE%80%E7%A7%B0%EF%BC%9A%E5%9B%A0%E6%9E%9C%E5%B9%B2%E9%A2%84%E6%97%A0%E4%BA%BA%E6%9C%BA%E9%81%BF%E9%9A%9C%E5%AF%BC%E8%88%AA%E7%B3%BB%E7%BB%9F]V1.0_%E8%AE%A1%E7%AE%97%E6%9C%BA%E8%BD%AF%E4%BB%B6%E8%91%97%E4%BD%9C%E6%9D%83%E7%99%BB%E8%AE%B0%E8%AF%81%E4%B9%A6.pdf"><span style="color: rgb(0, 0, 255);">PDF</span></a></u></span></li>
+			<li>
+				<span style="">斜视智慧诊断系统V1.0, 登记号：2024SR0179914&nbsp;<u><a href="https://imagelab.stu.edu.cn/upload/files/2024SR0179914_%E6%96%9C%E8%A7%86%E6%99%BA%E6%85%A7%E8%AF%8A%E6%96%AD%E7%B3%BB%E7%BB%9F_%E8%AE%A1%E7%AE%97%E6%9C%BA%E8%BD%AF%E4%BB%B6%E8%91%97%E4%BD%9C%E6%9D%83%E7%99%BB%E8%AE%B0%E8%AF%81%E4%B9%A6.pdf"><span style="color: rgb(0, 0, 255);">PDF</span></a></u></span></li>
+			<li>
+				<span style="">基于移动端的电厂DCS远程控制软件V1.0, 登记号:&nbsp;2023SR0261757&nbsp;<u><a href="https://imagelab.stu.edu.cn/upload/files/%E5%9F%BA%E4%BA%8E%E7%A7%BB%E5%8A%A8%E7%AB%AF%E7%9A%84%E7%94%B5%E5%8E%82DCS%E8%BF%9C%E7%A8%8B%E6%8E%A7%E5%88%B6%E8%BD%AF%E4%BB%B6.pdf"><span style="color: rgb(0, 0, 255);">PDF</span></a></u></span></li>
 			<li>
 				<span style="">全髋关节置换手术机器人控制系统, 登记号: 2022SR1361476&nbsp;<u><a href="https://imagelab.stu.edu.cn/upload/files/8、软著--全髋关节置换手术机器人控制系统V1.0(1).pdf"><span style="color: rgb(0, 0, 255);">PDF</span></a></u></span></li>
 			<li>
@@ -2385,6 +2391,7 @@
 
 	</body>
 </html>
+
 
 
 
