--- a/index.html
+++ b/index.html
@@ -1222,6 +1222,8 @@
 			<strong>发明专利：</strong></p>
 		<ol style="text-align: justify;">
 			<li>
+				于沂渭, <u><strong>范衠</strong></u>, 王顺鸽, 王诏君, 等. 结合因果模型和深度强化学习的多智能体避障方法及系统. 发明. (ZL 202311014776.4))&nbsp;<u><a href="https://imagelab.stu.edu.cn/upload/files/2023110147764_%E7%BB%93%E5%90%88%E5%9B%A0%E6%9E%9C%E6%A8%A1%E5%9E%8B%E5%92%8C%E6%B7%B1%E5%BA%A6%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%9A%84%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93%E9%81%BF%E9%9A%9C%E6%96%B9%E6%B3%95%E5%8F%8A%E7%B3%BB%E7%BB%9F_%E5%8F%91%E6%98%8E%E4%B8%93%E5%88%A9%E8%AF%81%E4%B9%A6(%E7%AD%BE%E7%AB%A0)(1).pdf"><span style="color: rgb(0, 0, 205);">PDF</span></a></u></li>
+			<li>
 				李文姬, 任鹏翔, 王诏君,&nbsp;<u><strong>范衠</strong></u>, 等. 一种基于基因调控网络的智能体集群运动控制方法及系统. 发明. (ZL 202310622227.9)&nbsp;<u><a href="https://imagelab.stu.edu.cn/upload/files/2023106222279_一种基于基因调控网络的智能体集群运动控制方法及系统_发明专利证书(签章).pdf"><span style="color: rgb(0, 0, 205);">PDF</span></a></u></li>
 			<li>
 				李文姬, 关朝滔, 王诏君, <strong><u>范衠</u></strong>, 等. 一种基于基因调控网络的智能体集群区域覆盖方法及系统. 发明. (ZL 202310614358.2)&nbsp;<u><a href="https://imagelab.stu.edu.cn/upload/files/2023106143582_一种基于基因调控网络的智能体集群区域覆盖方法及系统_发明专利证书(签章).pdf"><span style="color: rgb(0, 0, 205);">PDF</span></a></u></li>
@@ -2391,6 +2393,7 @@
 
 	</body>
 </html>
+
 
 
 
