--- a/index.html
+++ b/index.html
@@ -427,8 +427,7 @@
 			<li>
 				<u><strong>范衠 (著）</strong></u><strong>，</strong>朱贵杰，王攀(译). &ldquo;机电设计自动化新兴研究及其进展&rdquo;, 北京: 科学出版社, 2018, ISBN: 978-7-03-055452-9</li>
 			<li align="justify">
-			   <u><strong>范衠</strong></u><strong>，</strong>李耘，朱晓敏等（著）. “具身智能与设计自动化：机器人系统与优化方法” , 北京: 科学出版社, 2026</li>
-		</ol>    
+			    <u><strong>Z. Fan</strong></u>,Z.Wang,W.Li,et&nbsp;"Modular Design Automation of Intelligent Robot Systems"[M].John Wiley&Sons,2026(入选IEEE计算机智能协会系列丛书)</li>
 				</div>
 			</div>             
 
@@ -2393,6 +2392,7 @@
 
 	</body>
 </html>
+
 
 
 
