--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 			<li>
 				<u><strong>范衠 (著）</strong></u><strong>，</strong>朱贵杰，王攀(译). &ldquo;机电设计自动化新兴研究及其进展&rdquo;, 北京: 科学出版社, 2018, ISBN: 978-7-03-055452-9</li>
 			<li align="justify">
-			    <u><strong>Z. Fan</strong></u>,Z.Wang,W.Li,et&nbsp;"Modular Design Automation of Intelligent Robot Systems"[M].John Wiley&Sons,2026(入选IEEE计算机智能协会系列丛书)</li>
+			    <u><strong>Z. Fan</strong></u>,&nbsp;Z.Wang,W.Li,et &nbsp;al."Modular Design Automation of Intelligent Robot Systems"&nbsp;[M].John Wiley&Sons,2026&nbsp;(入选IEEE计算机智能协会系列丛书)</li>
 				</div>
 			</div>             
 
@@ -441,6 +441,10 @@
 		<h2 class="item-title">
 			<em style="font-family: arial, helvetica, sans-serif;"><strong>[2025]</strong></em></h2>
 		<ol style="text-align: justify;">
+			 <li>
+				 W.Li,Z.Wang,R,<strong><u>Z.Fan*</u></strong>,et&nbsp;al.Formation control of swarm robotics:A survey from biological inspirations to design automation methods[J].*Robotics and Autonomous Systems,2025(Accepted)(SCI2区，JCR: Q1)</li>
+			 <li>
+				 G.Zhu,<strong><u>Z. Fan</u></strong>,et&nbsp;al.Automatic lightweight networks for real-time road crack detection with DPSO[J].*Advanced Engineering Informatics,2025,68:103610.*(SCI 1区TOP期刊，IF=9.9)</li>
 			 <li>
 				 B. Xu, G. Rang, R. Xie, W. Li, D. Gong, <strong><u>Z. Fan</u></strong>, S. Yang, J. He. A prediction approach based on long short-term memory networks for dynamic multiobjective optimization[J]. Expert Systems with Applications, 2025: 127792.</li>
 			 <li>
@@ -2346,6 +2350,7 @@
 
 	</body>
 </html>
+
 
 
 
