--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@
 							<span>2025-2026，主持自主智能无人系统全国重点实验室（北京理工大学）开放基金课题 “面向复杂动态环境的无人集群自主进化和智能发育关键技术研究” ，项目编号：ZZKF2025-3-4</span></li>
 						<li>
 							<span>2025-2026，主持与深圳市优必选科技股份有限公司合作开发项目 “东部新区丹景项目智慧康养系统开发及维护” ，项目编号：GYY2025111301</span></li>
+						<li>
+							<span>2024-2027，主持与深圳市美格信测控技术有限公司合作开发项目“一种基于AI技术的电机下线NVH测试系统开发”，项目编号：GYY2024122502</span></li>
                         <li>
                             <span>2022-2025，主持科技创新2030 -&ldquo;新一代人工智能&rdquo;重大项目 &quot;因果推理与决策理论模型研究&quot;，项目编号：2021ZD0111502</span></li>
                         <li>
@@ -2350,6 +2352,7 @@
 
 	</body>
 </html>
+
 
 
 
