--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 			<em style="font-family: arial, helvetica, sans-serif;"><strong>[2025]</strong></em></h2>
 		<ol style="text-align: justify;">
 			 <li>
-				 W.Li,Z.Wang,R,<strong><u>Z.Fan*</u></strong>,etal.Formation control of swarm robotics:A survey from biological inspirations to design automation methods[J]._Robotics and Autonomous Systems_,2025(Accepted)(SCI2区，JCR: Q1)</li>
+				 W.Li,Z.Wang,R,<strong><u>Z.Fan*</u></strong>,etal.Formation control of swarm robotics:A survey from biological inspirations to design automation methods[J]._Robotics and Autonomous Systems,2025_(Accepted)(SCI2区，JCR: Q1)</li>
 			 <li>
 				 G.Zhu,<strong><u>Z. Fan</u></strong>,etal.Automatic lightweight networks for real-time road crack detection with DPSO[J]._Advanced Engineering Informatics,2025,68:103610._(SCI 1区TOP期刊，IF=9.9)</li>
 			 <li>
@@ -2352,6 +2352,7 @@
 
 	</body>
 </html>
+
 
 
 
